[package]
name = "p25"
version = "1.0.0"
authors = ["Mick Koch <mick@kochm.co>"]

[dependencies]

binfield_matrix = "0.1.0"
collect_slice = "1.2.0"
num = "^0.1.34"
static_ewma = {git = "https://github.com/kchmck/static_ewma.rs"}
static_fir = {git = "https://github.com/kchmck/static_fir.rs"}

serde = {version = "0.9.0", optional = true}
serde_derive = {version = "0.9.0", optional = true}

[features]

ser = ["serde", "serde_derive"]
