[package]
name = "p25"
version = "1.0.0"
authors = ["Mick Koch <mick@kochm.co>"]

[dependencies]

binfield_matrix = "0.2.0"
cai_cyclic = "0.1.2"
cai_golay = "0.1.1"
collect_slice = "1.2.0"
moving_avg = "0.2.0"
num-traits = "0.2.0"
static_fir = "0.2.0"

serde = {version = "0.9.0", optional = true}
serde_derive = {version = "0.9.0", optional = true}

[features]

ser = ["serde", "serde_derive"]
